--- a/MyEBuyer/src/main/webapp/login.html
+++ b/MyEBuyer/src/main/webapp/login.html
@@ -14,7 +14,7 @@
                 return false;
             }
             var password = $('#psw').val();
-            if ($.trim(password) === '') {
+            if (password === '') {
                 hint.text('密码不能为空！');
                 return false;
             }
