--- a/MyEBuyer/src/main/webapp/user/regsuccess.html
+++ b/MyEBuyer/src/main/webapp/user/regsuccess.html
@@ -1,6 +1,10 @@
+<html>
 <head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-		<meta http-equiv="refresh" content="3;url=../login.html">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta http-equiv="refresh" content="3;url=../login.html">
 </head>
+<body>
 <h2>注册成功!</h2>
 <h4><a href="../login.html">点击这里返回登陆页面</a></h4>
+</body>
+</html>
